# SorcererShowdown

./: README.md
.github/workflows/: .gitignore  codefile-counter.yml
SorcererShowdown - Source/: CMakeLists.txt  characters.json
SorcererShowdownSource/: CMakeLists.txt  characters.json  cursedtools.json  domains.json
SorcererShowdownSource/code/header/: std.h
SorcererShowdownSource/code/header/BindingVows/: BareHanded.h  BindingVowList.h  BindingVows.h  BrittleEfficiency.h  CursedEnergySacrifice.h  Overtime.h
SorcererShowdownSource/code/header/CharacterCreator/: CharacterCreator.h  CursedToolCreator.h  DomainCreator.h  JSONLoader.h
SorcererShowdownSource/code/header/CharacterCreator/AI/: Aggressive.h  CharacterAI.h  Randomized.h  Reactive.h
SorcererShowdownSource/code/header/Characters/: Character.h  CharacterList.h  Dummy.h
SorcererShowdownSource/code/header/Characters/CurseUsers/: CurseUser.h
SorcererShowdownSource/code/header/Characters/CurseUsers/CursedSpirits/: CursedSpirit.h  Mahito.h  TransfiguredHuman.h
SorcererShowdownSource/code/header/Characters/CurseUsers/Sorcerers/: Gojo.h  Hakari.h  Sorcerer.h  Sukuna.h  Yuta.h
SorcererShowdownSource/code/header/Characters/PhysicallyGifted/: PhysicallyGifted.h  Toji.h
SorcererShowdownSource/code/header/Characters/Shikigami/: Agito.h  Mahoraga.h  Rika.h  Shikigami.h  ShikigamiList.h
SorcererShowdownSource/code/header/CursedTools/: CursedTool.h  CursedToolList.h  InvertedSpearOfHeaven.h  Katana.h  PlayfulCloud.h  SplitSoulKatana.h
SorcererShowdownSource/code/header/Domains/: AuthenticMutualLove.h  Domain.h  DomainList.h  HollowWickerBasket.h  IdleDeathGamble.h  InfiniteVoid.h  MalevolentShrine.h  SelfEmbodimentOfPerfection.h  SimpleDomain.h
SorcererShowdownSource/code/header/GameManagement/: BattleManager.h  BattlefieldHeader.h  Colors.h  PlayerFinder.h  PlayerManager.h  UIDisplay.h  UserInterface.h  Utils.h
SorcererShowdownSource/code/header/Specials/: Specials.h  SpecialsList.h  UnlimitedPurple.h  WorldCuttingSlash.h
SorcererShowdownSource/code/header/Techniques/: Copy.h  IdleTransfiguration.h  Limitless.h  PrivatePureLoveTrain.h  Shrine.h  SubTechniques.h  TechniqueList.h  Techniques.h
SorcererShowdownSource/code/header/Techniques/Limitless/: Blue.h  Limitless.h  LimitlessTechnique.h  Purple.h  Red.h  UnlimitedHollowPurple.h
SorcererShowdownSource/code/header/Techniques/Shrine/: Cleave.h  Dismantle.h  Shrine.h  ShrineTechnique.h  SpiderwebCleave.h  WorldCuttingSlash.h
SorcererShowdownSource/code/source/BindingVows/: BareHanded.cpp  BindingVows.cpp  BrittleEfficiency.cpp  CursedEnergySacrifice.cpp  Overtime.cpp
SorcererShowdownSource/code/source/CharacterCreator/: Aggressive.cpp  CharacterCreator.cpp  Creator.cpp  CursedToolCreator.cpp  DomainCreator.cpp
SorcererShowdownSource/code/source/CharacterCreator/AI/: Aggressive.cpp  Brawler.cpp  CharacterAI.cpp  Randomized.cpp  Reactive.cpp
SorcererShowdownSource/code/source/Characters/: Character.cpp  Dummy.cpp
SorcererShowdownSource/code/source/Characters/CurseUsers/: CurseUsers.cpp
SorcererShowdownSource/code/source/Characters/CurseUsers/CursedSpirits/: CursedSpirit.cpp  Mahito.cpp  TransfiguredHuman.cpp
SorcererShowdownSource/code/source/Characters/CurseUsers/Sorcerers/: Gojo.cpp  Hakari.cpp  Sorcerer.cpp  Sukuna.cpp  Yuta.cpp
SorcererShowdownSource/code/source/Characters/PhysicallyGifted/: PhysicallyGifted.cpp  Toji.cpp
SorcererShowdownSource/code/source/Characters/Shikigami/: Agito.cpp  Mahoraga.cpp  Rika.cpp  Shikigami.cpp
SorcererShowdownSource/code/source/CursedTools/: CursedTools.cpp  InvertedSpearOfHeaven.cpp  Katana.cpp  PlayfulCloud.cpp  SplitSoulKatana.cpp
SorcererShowdownSource/code/source/Domains/: AuthenticMutualLove.cpp  Domain.cpp  HollowWickerBasket.cpp  IdleDeathGamble.cpp  InfiniteVoid.cpp  MalevolentShrine.cpp  SelfEmbodimentOfPerfection.cpp  SimpleDomain.cpp
SorcererShowdownSource/code/source/GameManagement/: BattleManager.cpp  PlayerFinder.cpp  PlayerManager.cpp  SorcererShowdown.cpp  UserInterface.cpp  Utils.cpp
SorcererShowdownSource/code/source/Specials/: Specials.cpp  UnlimitedPurple.cpp  WorldCuttingSlash.cpp
SorcererShowdownSource/code/source/Techniques/: Copy.cpp  IdleTransfiguration.cpp  Limitless.cpp  PrivatePureLoveTrain.cpp  Shrine.cpp  SubTechnique.cpp  Techniques.cpp
SorcererShowdownSource/code/source/Techniques/Limitless/: Blue.cpp  Limitless.cpp  Purple.cpp  Red.cpp  UnlimitedHollowPurple.cpp
SorcererShowdownSource/code/source/Techniques/Shrine/: Cleave.cpp  Dismantle.cpp  Shrine.cpp  SpiderwebCleave.cpp  WorldCuttingSlash.cpp
source/CharacterCreator/: CharacterCreator.cpp  CursedToolCreator.cpp  DomainCreator.cpp
source/Characters/: Character.cpp
source/Characters/Shikigami/: Rika.cpp  (+3 more)
source/CursedTools/: CursedTools.cpp  SplitSoulKatana.cpp
source/Domains/: Domain.cpp  HollowWickerBasket.cpp  IdleDeathGamble.cpp  InfiniteVoid.cpp
source/GameManagement/: PlayerManager.cpp  SorcererShowdown.cpp  UserInterface.cpp  Utils.cpp
source/Specials/: Specials.cpp
source/Techniques/: Copy.cpp  Limitless.cpp
(+60 files in other folders)
